ARROW-15312: [C++] Make Parquet guarantees more precise